--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ package-mode =  false
 
 [tool.poetry.dependencies]
 python = "^3.11"
+torch = "^2.4.1"
+transformers = "^4.44.2"
 
 
 [build-system]
