markdown to plaintext testing

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ package-mode =  false
 python = "^3.11"
 torch = "^2.4.1"
 transformers = "^4.44.2"
+jupyter = "^1.1.1"
+bs4 = "^0.0.2"
+markdown = "^3.7"
 
 
 [build-system]
