Local Summarization of notes added using huggingface summarization model (#1)
* WIP summarization tool for notes

* MVP ML summary implemented

* markdown to plaintext testing

* removing brackets from md file

* MEETING_SUMMARY model works well in testing

* Line splitting works on headers

* WIP split headers. Need to call it recursively for all smaller headers

* longest header function added

* split at header seems to work

* Tokens small enough check

* Tokenizer size debugging

* Checkpoint. TODO: split any note that is over twice the token size on next layer down of headers

* Checkpoint before heading home

* split function works, while loop splitting still WIP

* Splitting appears to work

* split_testing successfully creates a summary

* appears to work

* MVP finished

* Model information moved into TextSummary

* summary content cleaning added

* caching appears to work

* Note cache saved to JSON

* Caching works for edge cases

* precached summaries write to dailynote_file

* Summarizing bug appears to be fixed

* Need to remove < and > from notes

* Readme updated with most recent to-do

* readme updated

* in cache testing:
- `<` and `>` removed from final output
- empty notes summaries hard coded to be only "empty note"
- indentation removed from summarize_sections()

* daily_note_org writes daily_notes file

* Bug fixed where new notes weren't added to the final obsidian note

* done debug print line added

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,11 @@ package-mode =  false
 
 [tool.poetry.dependencies]
 python = "^3.11"
+torch = "^2.4.1"
+transformers = "^4.44.2"
+jupyter = "^1.1.1"
+bs4 = "^0.0.2"
+markdown = "^3.7"
 
 
 [build-system]
